Prepare for eventual migration to higher JavaSE
Some system APIs have been deprecate and slated for removal since 20 and
21. Some of them can easily be fixed. This is first iteration.