@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2024 IBM Corporation and others.
+ * Copyright (c) 2000, 2025 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -17,15 +17,7 @@ import java.io.BufferedInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.HttpURLConnection;
-import java.net.JarURLConnection;
-import java.net.MalformedURLException;
-import java.net.ProtocolException;
-import java.net.SocketException;
-import java.net.SocketTimeoutException;
-import java.net.URL;
-import java.net.URLConnection;
-import java.net.UnknownHostException;
+import java.net.*;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -749,8 +741,8 @@ public abstract class JavaElement extends PlatformObject implements IJavaElement
 			if (IClasspathAttribute.JAVADOC_LOCATION_ATTRIBUTE_NAME.equals(attrib.getName())) {
 				String value = attrib.getValue();
 				try {
-					return new URL(value);
-				} catch (MalformedURLException e) {
+					return (new URI(value)).toURL();
+				} catch (MalformedURLException | URISyntaxException e) {
 					throw new JavaModelException(new JavaModelStatus(IJavaModelStatusConstants.CANNOT_RETRIEVE_ATTACHED_JAVADOC, value));
 				}
 			}
@@ -819,12 +811,12 @@ public abstract class JavaElement extends PlatformObject implements IJavaElement
 	protected String getURLContents(URL baseLoc, String docUrlValue) throws JavaModelException {
 		InputStream stream = null;
 		JarURLConnection connection2 = null;
-		URL docUrl = null;
+		URI docUri = null;
 		URLConnection connection = null;
 		try {
 			redirect: for (int i= 0; i < 5; i++) { // avoid endless redirects...
-				docUrl = new URL(docUrlValue);
-				connection = docUrl.openConnection();
+				docUri = new URI(docUrlValue);
+				connection = docUri.toURL().openConnection();
 
 				int timeoutVal = 10000;
 				connection.setConnectTimeout(timeoutVal);
